# librefang

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.de.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  SECURITY.md  docker-compose.yml  justfile  librefang.toml.example
articles/: release-0.6.0.md
crates/librefang-api/: Cargo.toml
crates/librefang-api/dashboard/src/locales/: en.json  zh.json
crates/librefang-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/librefang-api/src/routes/: config.rs  network.rs  providers.rs  skills.rs
crates/librefang-api/static/: index_body.html  index_head.html
crates/librefang-api/static/css/: components.css  layout.css  theme.css
crates/librefang-api/static/js/: api.js  app.js
crates/librefang-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  comms.js  hands.js  logs.js  overview.js  runtime.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/librefang-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
deploy/: librefang.service
docs/: README.md  agent-templates.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  configuration.md  getting-started.md  launch-roadmap.md  mcp-a2a.md  production-checklist.md  security.md  skill-development.md  troubleshooting.md
scripts/: release.sh
xtask/: Cargo.toml
(+259 files in other folders)
